[package]
name = "pocs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = { git = "https://github.com/1320014053/solana-poc-framework" }

#anchor-client = "0.19.0"

solana-program = "1.11.10"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

owo-colors = "3.1.0"
solana-logger = "1.11.10"

[lib]
